# code-nav

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  too-api.md
skills/: code_nav_wiki.md
src/code_nav/: __init__.py  __main__.py  models.py  server.py
src/code_nav/engines/: __init__.py  base.py  pyright_engine.py  sg_engine.py
src/code_nav/indexer/: __init__.py  ast_parser.py  builder.py  schema.sql  store.py
src/code_nav/tools/: primitives.py  wiki_tools.py  workflows.py
src/code_nav/utils/: cache.py  merge.py  project.py
src/code_nav/wiki/: __init__.py  candidates.py  manager.py  templates.py
