[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-nav"
version = "0.1.0"
description = "MCP Server for semantic code navigation — find references, go to definition, impact analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "pyright>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/code_nav"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
